--- a/assets/styles.css
+++ b/assets/styles.css
@@ -68,3 +68,19 @@
     width: 200px;
 }
 
+.poke__card {
+  background-color: var(--violet-card);
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin: 3rem;
+  max-width: 700px;
+}
+
+.pk__img {
+  max-width: 250px;
+  max-height: 250px;
+}
